--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden;">
 <script src="js/three.min.js"></script>
+<script src="js/leap.min.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
