--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset=utf-8>
     <title>LeapMotion game</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden;">
+<div id="hud">
+    <div id="topbar">
+        <div>Score <span id="score">0</span></div>
+    </div>
+    <div id="menu">
+        <button id="resetbutton">Reset</button>
+    </div>
+</div>
 <script src="js/three.min.js"></script>
 <script src="js/leap.min.js"></script>
 <script src="js/main.js"></script>
