First jump implementation

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body style="margin: 0; padding: 0; overflow: hidden;">
 <div id="hud">
     <div id="topbar">
-        <div>score <span id="score">0</span></div>
+        <div>score: <span id="score">0</span></div>
     </div>
     <div id="menu">
         <h1>Game Over</h1>
-        <button id="resetbutton">reset</button>
+        <button id="reset-button">reset</button>
     </div>
 </div>
 <script src="js/three.min.js"></script>
