Add new movement controller

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<audio id="main-sound">
+<audio id="main-sound" loop >
     <source src="music/main-theme.mp3" type="audio/mp3">
 </audio>
 <audio id="collision-sound">
