Add ambient light and hud menu

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 <body style="margin: 0; padding: 0; overflow: hidden;">
 <div id="layer"></div>
 
-
+<div id="hud-menu" class="hud-part">
+    <h1>GAME OVER</h1>
+    <h3>High Score <p id="high-score">0</p></h3>
+    <button id="reset-button">play again</button>
+</div>
 <div id="hud">
     <div id="hud-left" class="hud-part">
-        Speed <span id="speed">10</span>
+        Speed <span id="speed">0</span>
     </div>
     <div id="hud-right" class="hud-part">
         Score <span id="score">0</span>
