--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden;">
 <div id="hud-menu" class="hud-part">
-    <h1>GAME OVER</h1>
-    <h3>High Score <p id="high-score">0</p></h3>
+    <h2>GAME OVER</h2>
+    <h4>High Score <p id="high-score">0</p></h4>
     <button id="reset-button">play again</button>
 </div>
 <div id="hud">
     <div id="hud-left" class="hud-part">
         Speed <span id="speed">0</span>
+    </div>
+    <div id="hud-ammo" class="hud-part">
+        Bombs <span id="bombs">2</span>
     </div>
     <div id="hud-right" class="hud-part">
         Score <span id="score">0</span>
@@ -29,8 +32,11 @@
 <audio id="barrel-roll">
     <source src="music/barrel-roll.mp3" type="audio/mp3">
 </audio>
-<audio id="blaster-sound">
-    <source src="music/blaster.mp3" type="audio/mp3">
+<audio id="bomb-explosion">
+    <source src="music/bomb-explosion.mp3" type="audio/mp3">
+</audio>
+<audio id="bomb-pickup">
+    <source src="music/bomb-pickup.mp3" type="audio/mp3">
 </audio>
 
 <script src="js/three.min.js"></script>
