--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset=utf-8>
-    <title>LeapMotion game</title>
+    <title>StarMotion</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body style="margin: 0; padding: 0; overflow: hidden;">
